@@ -1,7 +1,5 @@
 package com.comcast.lcs.controller;
 
-import java.util.Set;
-
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,6 +11,8 @@ import com.comcast.lcs.dto.ErrorResponse;
 import com.comcast.lcs.dto.Keys;
 import com.comcast.lcs.dto.LcsRequest;
 import com.comcast.lcs.dto.LcsResponse;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 
 
 class V1ApiIT extends AbstractIT {
@@ -23,7 +23,7 @@ class V1ApiIT extends AbstractIT {
   @Test
   @DisplayName("Expect bad request if there is no request body.")
   void verifyEmptyRequest(){
-    //var expectedErrorResponse = new ErrorResponse("The format of the request is not acceptable",400);
+    var expectedErrorResponse = new ErrorResponse("The format of the request is not acceptable",400);
 
       webTestClient
           .post()
@@ -31,22 +31,39 @@ class V1ApiIT extends AbstractIT {
           .contentType(MediaType.APPLICATION_JSON)
           .exchange()
           .expectStatus()
-          .isBadRequest();
-          //.expectBody(ErrorResponse.class)
-          //.isEqualTo(expectedErrorResponse);
+          .isBadRequest()
+          .expectBody(ErrorResponse.class)
+          .isEqualTo(expectedErrorResponse);
   }
 
 
   @Test
-  @DisplayName("Expect bad request if the set is not unique.")
-  void verifyNotUniqueSetRequest(){
-    var expectedErrorResponse = new ErrorResponse("SetOfStrings should not be empty",400);
+  @DisplayName("Expect bad request if the set is empty.")
+  void verifyIfSetIsEmpty(){
+    var expectedErrorResponse = new ErrorResponse("setOfStrings should not be empty",400);
 
     webTestClient
         .post()
         .uri("/v1/lcs")
         .contentType(MediaType.APPLICATION_JSON)
-        .bodyValue(new LcsRequest(Set.of()))
+        .bodyValue(new LcsRequest(ImmutableList.of()))
+        .exchange()
+        .expectStatus()
+        .isBadRequest()
+        .expectBody(ErrorResponse.class)
+        .isEqualTo(expectedErrorResponse);
+  }
+
+  @Test
+  @DisplayName("Expect bad request if the set is not unique.")
+  void verifyNotUniqueSetRequest(){
+    var expectedErrorResponse = new ErrorResponse("setOfStrings must be a set",400);
+
+    webTestClient
+        .post()
+        .uri("/v1/lcs")
+        .contentType(MediaType.APPLICATION_JSON)
+        .bodyValue(new LcsRequest(ImmutableList.of(new Keys("comcast"),new Keys("comcast"), new Keys("comcastic"), new Keys("broadcaster"))))
         .exchange()
         .expectStatus()
         .isBadRequest()
@@ -63,7 +80,7 @@ class V1ApiIT extends AbstractIT {
         .post()
         .uri("/v1/lcs")
         .contentType(MediaType.APPLICATION_JSON)
-        .bodyValue(new LcsRequest(Set.of(new Keys("Comcast"),new Keys("Denver"))))
+        .bodyValue(new LcsRequest(ImmutableList.of(new Keys("Comcast"),new Keys("Denver"))))
         .exchange()
         .expectStatus()
         .isNotFound()
@@ -74,13 +91,13 @@ class V1ApiIT extends AbstractIT {
   @Test
   @DisplayName("Expect successful response returns longest common substring")
   void verifySuccessfulResponse(){
-    var lcsResponse = new LcsResponse(Set.of(new Keys("cast")));
+    var lcsResponse = new LcsResponse(ImmutableSet.of(new Keys("cast")));
 
     webTestClient
         .post()
         .uri("/v1/lcs")
         .contentType(MediaType.APPLICATION_JSON)
-        .bodyValue(new LcsRequest(Set.of(new Keys("comcast"),new Keys("comcastic"), new Keys("broadcaster"))))
+        .bodyValue(new LcsRequest(ImmutableList.of(new Keys("comcast"),new Keys("comcastic"), new Keys("broadcaster"))))
         .exchange()
         .expectStatus()
         .is2xxSuccessful()
